# bmed8813rob-sp21-team1-r2drink2

./: .gitignore  LICENSE  Makefile  README.md  controller.py  deps.mk  pyproject.toml  requirements.txt  run_gamepad_teleop.py  run_teleop.py  setup-unix.mk  setup-win.mk  setup-win.ps1  setup.mk  testing.ipynb  testing.txt  testing2.txt
docker/: Dockerfile
r2drink2/: camera.py  controller.py  env.py  gamepad_teleop.py  teleop.py  test.py
r2drink2/agents/: robot.py  stretch.py
r2drink2/setup/: chair.py  human.py  misc.py  robot.py  rooms.py
r2drink2/setup/staging/: __init__.py  hydration.py  table.py
setup-win/: Makefile
